--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
             <img class="h-15 md:h-6 lg:h-8" src="./img/icon-logo.svg" alt="Tea House">
           </a>
           <!-- Search -->
-          <div class="input-group hidden lg:block relative top-0 w-full md:max-w-[35.25rem] h-6 md:h-[2.8125rem]">
+          <div class="input-group hidden lg:block relative top-0 w-full md:max-w-[35.25rem] h-6 md:h-12">
             <div class="w-full absolute top-0">
               <!-- Cart -->
               <div
@@ -109,11 +109,11 @@
                       </svg>
                     </button>
                   </div>
-                  <div class="modal-content hidden fade-in w-full h-[calc(100vh-9.5rem)] card-scroll overflow-y-auto mt-4 md:mt-5 -mr-4 md:-mr-2 pr-2">
+                  <div class="modal-content hidden fade-in w-full h-[calc(100vh-10rem)] lg:h-[calc(100vh-10.5rem)] card-scroll overflow-y-auto mt-4 md:mt-5 -mr-4 md:-mr-2 pr-2">
                     <!-- Search Result Text -->
                     <div class="fade-in options-result hidden space-y-2 mb-4">
                       <!-- 1 -->
-                      <div class="cursor-pointer flex items-center gap-2">
+                      <a href="#" class="cursor-pointer flex items-center gap-2">
                         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M14.375 8.625C14.375 7.50521 14.1016 6.46354 13.5547 5.5C12.9818 4.53646 12.2135 3.76823 11.25 3.19531C10.2604 2.64844 9.21875 2.375 8.125 2.375C7.03125 2.375 5.98958 2.64844 5 3.19531C4.03646 3.76823 3.26823 4.53646 2.69531 5.5C2.14844 6.46354 1.875 7.50521 1.875 8.625C1.875 9.74479 2.14844 10.7865 2.69531 11.75C3.26823 12.7135 4.03646 13.4818 5 14.0547C5.98958 14.6016 7.03125 14.875 8.125 14.875C9.21875 14.875 10.2604 14.6016 11.25 14.0547C12.2135 13.4818 12.9818 12.7135 13.5547 11.75C14.1016 10.7865 14.375 9.74479 14.375 8.625ZM13.1641 14.9922C11.7578 16.138 10.0781 16.724 8.125 16.75C5.83333 16.6979 3.91927 15.9036 2.38281 14.3672C0.846354 12.8307 0.0520833 10.9167 0 8.625C0.0520833 6.33333 0.846354 4.41927 2.38281 2.88281C3.91927 1.34635 5.83333 0.552083 8.125 0.5C10.4167 0.552083 12.3307 1.34635 13.8672 2.88281C15.4036 4.41927 16.1979 6.33333 16.25 8.625C16.224 10.5781 15.638 12.2578 14.4922 13.6641L19.7266 18.8984C20.0911 19.3411 20.0911 19.7839 19.7266 20.2266C19.2839 20.5911 18.8411 20.5911 18.3984 20.2266L13.1641 14.9922Z"
@@ -122,10 +122,10 @@
                         <p class="text-15 text-brand-black-400">Габа <span
                             class="font-semibold text-brand-black-500">Улун</span>
                         </p>
-                      </div>
+                      </a>
                       <hr>
                       <!-- 2 -->
-                      <div class="cursor-pointer flex items-center gap-2">
+                      <a href="#" class="cursor-pointer flex items-center gap-2">
                         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M14.375 8.625C14.375 7.50521 14.1016 6.46354 13.5547 5.5C12.9818 4.53646 12.2135 3.76823 11.25 3.19531C10.2604 2.64844 9.21875 2.375 8.125 2.375C7.03125 2.375 5.98958 2.64844 5 3.19531C4.03646 3.76823 3.26823 4.53646 2.69531 5.5C2.14844 6.46354 1.875 7.50521 1.875 8.625C1.875 9.74479 2.14844 10.7865 2.69531 11.75C3.26823 12.7135 4.03646 13.4818 5 14.0547C5.98958 14.6016 7.03125 14.875 8.125 14.875C9.21875 14.875 10.2604 14.6016 11.25 14.0547C12.2135 13.4818 12.9818 12.7135 13.5547 11.75C14.1016 10.7865 14.375 9.74479 14.375 8.625ZM13.1641 14.9922C11.7578 16.138 10.0781 16.724 8.125 16.75C5.83333 16.6979 3.91927 15.9036 2.38281 14.3672C0.846354 12.8307 0.0520833 10.9167 0 8.625C0.0520833 6.33333 0.846354 4.41927 2.38281 2.88281C3.91927 1.34635 5.83333 0.552083 8.125 0.5C10.4167 0.552083 12.3307 1.34635 13.8672 2.88281C15.4036 4.41927 16.1979 6.33333 16.25 8.625C16.224 10.5781 15.638 12.2578 14.4922 13.6641L19.7266 18.8984C20.0911 19.3411 20.0911 19.7839 19.7266 20.2266C19.2839 20.5911 18.8411 20.5911 18.3984 20.2266L13.1641 14.9922Z"
@@ -135,10 +135,10 @@
                             class="font-semibold text-brand-black-500">Улун
                             Navy
                             Blue</span></p>
-                      </div>
+                      </a>
                       <hr>
                       <!-- 3 -->
-                      <div class="cursor-pointer flex items-center gap-2">
+                      <a href="#" class="cursor-pointer flex items-center gap-2">
                         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M14.375 8.625C14.375 7.50521 14.1016 6.46354 13.5547 5.5C12.9818 4.53646 12.2135 3.76823 11.25 3.19531C10.2604 2.64844 9.21875 2.375 8.125 2.375C7.03125 2.375 5.98958 2.64844 5 3.19531C4.03646 3.76823 3.26823 4.53646 2.69531 5.5C2.14844 6.46354 1.875 7.50521 1.875 8.625C1.875 9.74479 2.14844 10.7865 2.69531 11.75C3.26823 12.7135 4.03646 13.4818 5 14.0547C5.98958 14.6016 7.03125 14.875 8.125 14.875C9.21875 14.875 10.2604 14.6016 11.25 14.0547C12.2135 13.4818 12.9818 12.7135 13.5547 11.75C14.1016 10.7865 14.375 9.74479 14.375 8.625ZM13.1641 14.9922C11.7578 16.138 10.0781 16.724 8.125 16.75C5.83333 16.6979 3.91927 15.9036 2.38281 14.3672C0.846354 12.8307 0.0520833 10.9167 0 8.625C0.0520833 6.33333 0.846354 4.41927 2.38281 2.88281C3.91927 1.34635 5.83333 0.552083 8.125 0.5C10.4167 0.552083 12.3307 1.34635 13.8672 2.88281C15.4036 4.41927 16.1979 6.33333 16.25 8.625C16.224 10.5781 15.638 12.2578 14.4922 13.6641L19.7266 18.8984C20.0911 19.3411 20.0911 19.7839 19.7266 20.2266C19.2839 20.5911 18.8411 20.5911 18.3984 20.2266L13.1641 14.9922Z"
@@ -147,10 +147,10 @@
                         <p class="text-15 text-brand-black-400">Габа <span
                             class="font-semibold text-brand-black-500">Улун</span>
                         </p>
-                      </div>
+                      </a>
                       <hr>
                       <!-- 4 -->
-                      <div class="cursor-pointer flex items-center gap-2">
+                      <a href="#" class="cursor-pointer flex items-center gap-2">
                         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M14.375 8.625C14.375 7.50521 14.1016 6.46354 13.5547 5.5C12.9818 4.53646 12.2135 3.76823 11.25 3.19531C10.2604 2.64844 9.21875 2.375 8.125 2.375C7.03125 2.375 5.98958 2.64844 5 3.19531C4.03646 3.76823 3.26823 4.53646 2.69531 5.5C2.14844 6.46354 1.875 7.50521 1.875 8.625C1.875 9.74479 2.14844 10.7865 2.69531 11.75C3.26823 12.7135 4.03646 13.4818 5 14.0547C5.98958 14.6016 7.03125 14.875 8.125 14.875C9.21875 14.875 10.2604 14.6016 11.25 14.0547C12.2135 13.4818 12.9818 12.7135 13.5547 11.75C14.1016 10.7865 14.375 9.74479 14.375 8.625ZM13.1641 14.9922C11.7578 16.138 10.0781 16.724 8.125 16.75C5.83333 16.6979 3.91927 15.9036 2.38281 14.3672C0.846354 12.8307 0.0520833 10.9167 0 8.625C0.0520833 6.33333 0.846354 4.41927 2.38281 2.88281C3.91927 1.34635 5.83333 0.552083 8.125 0.5C10.4167 0.552083 12.3307 1.34635 13.8672 2.88281C15.4036 4.41927 16.1979 6.33333 16.25 8.625C16.224 10.5781 15.638 12.2578 14.4922 13.6641L19.7266 18.8984C20.0911 19.3411 20.0911 19.7839 19.7266 20.2266C19.2839 20.5911 18.8411 20.5911 18.3984 20.2266L13.1641 14.9922Z"
@@ -160,10 +160,10 @@
                             class="font-semibold text-brand-black-500">Улун
                             Navy
                             Blue</span></p>
-                      </div>
+                      </a>
                       <hr>
                       <!-- 5 -->
-                      <div class="cursor-pointer flex items-center gap-2">
+                      <a href="#" class="cursor-pointer flex items-center gap-2">
                         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M14.375 8.625C14.375 7.50521 14.1016 6.46354 13.5547 5.5C12.9818 4.53646 12.2135 3.76823 11.25 3.19531C10.2604 2.64844 9.21875 2.375 8.125 2.375C7.03125 2.375 5.98958 2.64844 5 3.19531C4.03646 3.76823 3.26823 4.53646 2.69531 5.5C2.14844 6.46354 1.875 7.50521 1.875 8.625C1.875 9.74479 2.14844 10.7865 2.69531 11.75C3.26823 12.7135 4.03646 13.4818 5 14.0547C5.98958 14.6016 7.03125 14.875 8.125 14.875C9.21875 14.875 10.2604 14.6016 11.25 14.0547C12.2135 13.4818 12.9818 12.7135 13.5547 11.75C14.1016 10.7865 14.375 9.74479 14.375 8.625ZM13.1641 14.9922C11.7578 16.138 10.0781 16.724 8.125 16.75C5.83333 16.6979 3.91927 15.9036 2.38281 14.3672C0.846354 12.8307 0.0520833 10.9167 0 8.625C0.0520833 6.33333 0.846354 4.41927 2.38281 2.88281C3.91927 1.34635 5.83333 0.552083 8.125 0.5C10.4167 0.552083 12.3307 1.34635 13.8672 2.88281C15.4036 4.41927 16.1979 6.33333 16.25 8.625C16.224 10.5781 15.638 12.2578 14.4922 13.6641L19.7266 18.8984C20.0911 19.3411 20.0911 19.7839 19.7266 20.2266C19.2839 20.5911 18.8411 20.5911 18.3984 20.2266L13.1641 14.9922Z"
@@ -172,10 +172,10 @@
                         <p class="text-15 text-brand-black-400">Габа <span
                             class="font-semibold text-brand-black-500">Улун</span>
                         </p>
-                      </div>
+                      </a>
                       <hr>
                       <!-- 6 -->
-                      <div class="cursor-pointer flex items-center gap-2">
+                      <a href="#" class="cursor-pointer flex items-center gap-2">
                         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M14.375 8.625C14.375 7.50521 14.1016 6.46354 13.5547 5.5C12.9818 4.53646 12.2135 3.76823 11.25 3.19531C10.2604 2.64844 9.21875 2.375 8.125 2.375C7.03125 2.375 5.98958 2.64844 5 3.19531C4.03646 3.76823 3.26823 4.53646 2.69531 5.5C2.14844 6.46354 1.875 7.50521 1.875 8.625C1.875 9.74479 2.14844 10.7865 2.69531 11.75C3.26823 12.7135 4.03646 13.4818 5 14.0547C5.98958 14.6016 7.03125 14.875 8.125 14.875C9.21875 14.875 10.2604 14.6016 11.25 14.0547C12.2135 13.4818 12.9818 12.7135 13.5547 11.75C14.1016 10.7865 14.375 9.74479 14.375 8.625ZM13.1641 14.9922C11.7578 16.138 10.0781 16.724 8.125 16.75C5.83333 16.6979 3.91927 15.9036 2.38281 14.3672C0.846354 12.8307 0.0520833 10.9167 0 8.625C0.0520833 6.33333 0.846354 4.41927 2.38281 2.88281C3.91927 1.34635 5.83333 0.552083 8.125 0.5C10.4167 0.552083 12.3307 1.34635 13.8672 2.88281C15.4036 4.41927 16.1979 6.33333 16.25 8.625C16.224 10.5781 15.638 12.2578 14.4922 13.6641L19.7266 18.8984C20.0911 19.3411 20.0911 19.7839 19.7266 20.2266C19.2839 20.5911 18.8411 20.5911 18.3984 20.2266L13.1641 14.9922Z"
@@ -185,7 +185,7 @@
                             class="font-semibold text-brand-black-500">Улун
                             Navy
                             Blue</span></p>
-                      </div>
+                      </a>
                       <hr>
                     </div>
                     <div>
@@ -193,7 +193,7 @@
                       <!-- Carts Destktop -->
                       <div class="hidden md:grid grid-cols-2 gap-y-8 gap-x-5 lg:gap-x-30 mt-4">
                         <!-- Card 1 -->
-                        <a href="./product.html" class="flex gap-2.5">
+                        <a href="#" class="flex gap-2.5">
                           <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                           <div>
                             <div class="flex gap-1">
@@ -821,16 +821,16 @@
           <!-- Navigation Bar -->
           <div class="w-full max-w-[15.25rem] hidden lg:flex items-center gap-x-6">
             <!-- Orders -->
-            <button
+            <a
               class="flex flex-col gap-2.5 items-center text-brand-black-400 transition duration-200 hover:text-brand-green-400"
-              href="#">
+              href="./delivery.html">
               <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M16.5312 2.75H12.125V6.5H18.6875L17.2344 3.21875C17.0781 2.90625 16.8438 2.75 16.5312 2.75ZM19.25 8.75H2.75V18.5C2.78125 18.9688 3.03125 19.2188 3.5 19.25H18.5C18.9688 19.2188 19.2188 18.9688 19.25 18.5V8.75ZM3.3125 6.5H9.875V2.75H5.46875C5.125 2.75 4.89062 2.90625 4.76562 3.21875L3.3125 6.5ZM16.5312 0.5C17.8125 0.5625 18.7344 1.15625 19.2969 2.28125L21.2656 6.6875C21.4219 7.0625 21.5 7.46875 21.5 7.90625V18.5C21.4688 19.3438 21.1719 20.0469 20.6094 20.6094C20.0469 21.1719 19.3438 21.4688 18.5 21.5H3.5C2.65625 21.4688 1.95312 21.1719 1.39062 20.6094C0.828125 20.0469 0.53125 19.3438 0.5 18.5V7.90625C0.5 7.46875 0.59375 7.0625 0.78125 6.6875L2.70312 2.28125C3.26562 1.15625 4.1875 0.5625 5.46875 0.5H16.5312Z"
                   fill="currentColor" />
               </svg>
-              <span class="text-13">Заказы</span>
-            </button>
+              <span class="text-13">Доставки</span>
+            </a>
             <!-- Fav -->
             <button
               class="flex flex-col gap-2.5 items-center text-brand-black-400 transition duration-200 hover:text-brand-green-400"
@@ -945,31 +945,31 @@
                   Контакты
                 </a>
               </div>
-              <!--  Buttons  -->
+              <!--  Buttons & Links  -->
               <div class="flex flex-col gap-y-4 border-t pt-5 mt-5">
-                <button
+                <a
                   class="text-left text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl"
-                  href="#">
+                  href="./catalog.html">
                   Каталог
-                </button>
-                <button
+                </a>
+                <a
                   class="text-left text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl"
-                  href="#">
-                  Заказы
-                </button>
-                <button
+                  href="./delivery.html">
+                  Доставки
+                </a>
+                <a href="./basket.html"
                   class="product-modalBtn text-left text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl">
                   Корзина
-                </button>
+                </a>
                 <button
                   class="login-btn text-left text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl">
                   Войти
                 </button>
-                <button
+                <a
                   class="text-left text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl"
                   href="#">
                   Избранное
-                </button>
+                </a>
               </div>
             </div>
           </div>
@@ -979,7 +979,7 @@
           <!-- Product Modal  -->
           <div class="product-modal hidden fixed inset-0 z-30 w-full min-h-screen bg-[#020202]/20">
             <div
-              class="fade-in product-modal__content fade-in relative w-full max-w-[45.0625rem] min-h-full bg-white rounded-md pr-2 md:pr-8 lg:pr-42 p-4 md:py-7 lg:py-10 px-4 md:px-8 lg:px-42 mt-16 xs:mt-0 ml-auto">
+              class="fade-in product-modal__content fade-in relative w-full max-w-[45.0625rem] min-h-full bg-white rounded-md pr-2 md:pr-8 lg:pr-42 p-4 md:py-7 lg:py-10 px-4 md:px-8 lg:px-42 mt-16 md:mt-0 ml-auto">
               <div class="flex items-center justify-between gap-5">
                 <h3>Товары в корзине</h3>
                 <!-- Exit Btn -->
@@ -989,7 +989,7 @@
                 </button>
               </div>
               <div
-                class="overflow-y-auto h-[calc(100vh-16rem)] pr-1 md:pr-4 mt-4 lg:mt-8 space-y-4 lg:space-y-6">
+                class="overflow-y-auto h-[calc(100vh-17.5rem)] md:h-[calc(100vh-15rem)] pr-1 md:pr-4 mt-4 lg:mt-8 space-y-4 lg:space-y-6">
                 <hr class="hidden md:block">
                 <!-- Cart 1 -->
                 <div>
